# new_admin_panel_sprint_3

.github/workflows/: code-checker.yaml
etl/: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml
etl/app/: Dockerfile  Dockerfile.dev  docker-entrypoint.dev.sh  docker-entrypoint.sh  pyproject.toml
etl/app/config/: settings.py  urls.py
etl/app/config/components/: databases.py  debug_toolbar.py  elasticsearch.py  installed_apps.py  logging.py  restframework.py  time.py
etl/app/movies/: admin.py  apps.py  models.py
etl/app/movies/api/: signals.py  urls.py
etl/app/movies/api/v1/: paginators.py  serializers.py  urls.py  views.py
etl/app/movies/api/v2/: movies API.postman_collection.json  urls.py  views.py
etl/app/movies/locale/en/LC_MESSAGES/: django.po
etl/app/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
etl/app/movies/migrations/: 0001_initial.py
etl/nginx/: nginx.conf
etl/nginx/conf.d/: default.conf
etl/postgres_to_es/: .env.example  .gitignore  Dockerfile.dev  current_state.json  main.py  pyproject.toml
etl/postgres_to_es/src/: extract.py  load.py  transform.py
etl/postgres_to_es/utils/: db_connections.py  state.py  validators.py
etl/sqlite_to_postgres/: .env.example  .gitignore
